// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons/<ino-button> Dense smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="filled"
                disabled="false"
                dense="true"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--filled button--dense"
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="filled"
                disabled="true"
                dense="false"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              disabled
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Filled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="filled"
                disabled="false"
                dense="false"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> LeadingAndTrailingIcon smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <div class="container">
      <ino-button class="hydrated">
        <button class="button button__variant--filled button__icon--leading"
                type="button"
        >
          <span class="icon__wrapper">
            <ino-icon icon="info"
                      slot="icon-leading"
                      class="hydrated ino-icon--color-scheme-primary"
            >
            </ino-icon>
          </span>
          <span class="button__label">
            Label
          </span>
        </button>
      </ino-button>
      <ino-button class="hydrated">
        <button class="button button__variant--filled button__icon--trailing"
                type="button"
        >
          <span class="button__label">
            Label
          </span>
          <span class="icon__wrapper">
            <ino-icon icon="info"
                      slot="icon-trailing"
                      class="hydrated ino-icon--color-scheme-primary"
            >
            </ino-icon>
          </span>
        </button>
      </ino-button>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Loading smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="filled"
                disabled="false"
                dense="false"
                loading
                class="ino-button--loading hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label button__label--hide">
          Label
        </span>
        <ino-spinner class="ino-spinner--type-circle ino-spinner--color-scheme-primary hydrated">
          <div class="ino-spinner__composer"
               style="width: 20px; height: 20px;"
          >
            <div class="ino-spinner__circle-1">
            </div>
            <div class="ino-spinner__circle-2">
            </div>
            <div class="ino-spinner__circle-3">
            </div>
            <div class="ino-spinner__circle-4">
            </div>
            <div class="ino-spinner__circle-5">
            </div>
            <div class="ino-spinner__circle-6">
            </div>
            <div class="ino-spinner__circle-7">
            </div>
            <div class="ino-spinner__circle-8">
            </div>
            <div class="ino-spinner__circle-9">
            </div>
            <div class="ino-spinner__circle-10">
            </div>
            <div class="ino-spinner__circle-11">
            </div>
            <div class="ino-spinner__circle-12">
            </div>
          </div>
        </ino-spinner>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Outlined smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="outlined"
                disabled="false"
                dense="false"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--outlined"
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="filled"
                disabled="false"
                dense="false"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Buttons/<ino-button> Text smoke-test 1`] = `
<div id="root-inner">
  <div class="story-button">
    <ino-button variant="text"
                disabled="false"
                dense="false"
                loading="false"
                class="hydrated"
    >
      <button class="button button__variant--text"
              type="button"
      >
        <span class="button__label">
          Label
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;
